compiler/testData/diagnostics/nativeTests/dynamic.kt

fun test(a: <!UNSUPPORTED!>dynamic<!>) = a
